package org.example.domain.pricing;

import lombok.Value;

@Value
public class Price {
    int value;
}
